correctly hidden scrollbar for cards

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,9 +5,19 @@
 @layer components {
     .glassCard {
         /* From https://css.glass */
-        background: rgba(255, 255, 255, 0.10);
+        background: rgba(255, 255, 255, 0.173);
         border-radius: 16px;
         backdrop-filter: blur(1.4px);
         -webkit-backdrop-filter: blur(1.4px);
     }
+
+    .hideScrollbar::-webkit-scrollbar {
+        display: none;
+      }
+
+      /* Hide scrollbar for IE, Edge and Firefox */
+      .hideScrollbar {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+      }
   }
